# recordss

api/app/: page.tsx
api/app/api/dns-lookup/: route.ts
api/app/api/dns-tools/: route.ts
api/app/api/email-security/: route.ts
api/lib/: dns-utils.ts
client/: package.json  tailwind.config.ts
client/app/: globals.css  layout.tsx  page.tsx
client/app/offres/: page.tsx
client/app/privacy/: page.tsx
client/app/whitelist/: page.tsx
client/components/: custom-cursor.tsx  domain-forms.tsx  footer.tsx  language-switcher.tsx  navbar.tsx  scroll-animations.tsx  use-case-modal.tsx
client/components/domain-forms/: availability-form.tsx  connect-domain-form.tsx  connect-domain-result.tsx  dns-checks-list.tsx  dns-records-table.tsx  email-security-form.tsx  web3-services-list.tsx
client/contexts/: language-context.tsx
client/data-chart/: wrapper.tsx
client/data-chart/line/: 4.tsx
client/types/: api-responses.ts
llm/: README.md  rust-toolchain.toml
llm/examples/icp-lookup-agent-motoko/: dfx.json  mops.toml
llm/examples/icp-lookup-agent-rust/: README.md  dfx.json  justfile
llm/examples/quickstart-agent-motoko/: README.md
llm/examples/quickstart-agent-rust/: README.md  dfx.json
llm/examples/quickstart-agent-typescript/: .gitignore  README.md  package-lock.json
llm/motoko/: .gitignore  mops.toml
llm/motoko/src/: lib.mo
llm/rust/: Cargo.toml  README.md
llm/rust/src/: lib.rs
llm/typescript/: .gitignore  .npmignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
llm/typescript/docs/: azle-integration.md
llm/typescript/src/: index.ts
(+19 files in other folders)
