[package]
name = "ic-llm"
version = "0.4.0"
edition = "2021"
description = "A library for making requests to the LLM canister on the Internet Computer"
homepage = "https://docs.rs/ic-llm"
documentation = "https://docs.rs/ic-llm"
license = "Apache-2.0"
include = ["src", "Cargo.toml", "../LICENSE", "README.md"]
repository = "https://github.com/dfinity/llm"
readme = "README.md"

[dependencies]
candid = "0.10.13"
ic-cdk = "0.17.1"
serde = "1.0.217"
